# spryx

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  jetson_arm_sim.cpp
include/spryx/: link.h  primitives.h  rnea.h
tests/: CMakeLists.txt  test_rnea.cpp
